--- a/src/scss/layout-drawings/_layout-drawings-main.scss
+++ b/src/scss/layout-drawings/_layout-drawings-main.scss
@@ -17,7 +17,7 @@ main{
        
     }
 }
-.about, .draw, .code, .contacts{
+.draw, .gallery, .contacts{
     background-color: #FFFFFF;
     width: 70vw;
     margin: 2rem;
@@ -49,7 +49,7 @@ main{
     }  
     
 }
-.code-text, .contacts-text{
+.contacts-text{
     padding: 1rem;
 }
 a{
@@ -65,20 +65,19 @@ a{
     }
 }
 .gallery{
-    background-color: #FFFFFF;
-    width: 70vw;
-    margin: 2rem;
-    div{
-        h3{
-            background-color: #037F8C;
-            height: 7vh;
-            width: 20vw;
-            color: #FFFFFF;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            padding-left: 1rem;
-            margin: 0;
-        }
+    ul{
+        list-style: none;
+        padding-left: 3vw;
     }
+}
+.gallery img{
+    width: 400px;
+    border: black 1px solid;
+}
+.gallery img:hover{
+    width: 700px;
+    border: black 1px solid;
+    background-color: wheat;
+    padding: 10px 10px 40px 10px;
+    transition: 2s;
 }
